Trying to get CSS to work on Github

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             color:rgb(0, 9, 37);
         }
     </style>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"/>
     <h1 style="background-color: rgb(111, 128, 146); opacity: 0.85;"> Where do college students get their news from? </h1>
 </head>
 
